# fathom

./: .gitignore  LICENSE  README.ko.md  README.md  SKILL.md  config.default.json  install.sh  pyproject.toml  registry.yaml
dbs/: base.py
dbs/itkc/: adapter.py  contract.md
dbs/itkc/references/: collections.md  contract.md  itkc_openapi.md
dbs/itkc/scripts/: munzip_crawler.py  munzip_index_sync.py
dbs/sillok/: adapter.py  contract.md
dbs/sillok/references/: contract.md
dbs/sillok/scripts/: sillok_crawler.py  sillok_index_sync.py  sillok_search.py
dbs/sillok/scripts/sillok/: __init__.py  common.py
dbs/sjw/: adapter.py  contract.md
dbs/sjw/references/: contract.md
dbs/sjw/scripts/: sjw_crawler.py  sjw_search.py
engine/: config.py  inventory.py  onboarding.py  output.py  provenance.py  selector.py  workflow.py
tests/: conftest.py  test_engine.py  test_itkc.py  test_sillok.py  test_sjw.py
